--- a/ShoppingCart/main.css
+++ b/ShoppingCart/main.css
@@ -1,40 +1,49 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: Arial;
+  background-color: #4a4a4a;
+  margin: 0;
+  padding: 0;
 }
-
+h1 {
+  color: white;
+}
 .container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 0 20px;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
 }
 
 .product-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
 }
 
 .product-card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    text-align: center;
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 10px;
+  background: #787878;
 }
 
-.product-card h2 {
-    margin-top: 0;
+.product-card h2,
+p {
+  margin-top: 0;
+  color: #fff;
 }
 
 .product-card button {
-    margin-top: 10px;
-    padding: 5px 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
+  font-family: sans-serif;
+  margin-top: 10px;
+  padding: 8px 10px;
+  background-color: #008e2d;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .product-card button:hover {
-    background-color: #0056b3;
+  background-color: #000000;
+  transition: 0.3s;
 }
